# es_project

./: README.md  run_with_konro.sh  slurm.conf
konro_backprop_loc/: CMakeLists.txt  HOWTOTEST.md  Makefile  README.md
konro_backprop_loc/src/: CMakeLists.txt  backprop.cpp  backprop.h  backprop_kernel.cpp  exec.cpp  facetrain.cpp  feedback.h  imagenet.cpp
konro_loc/: CMakeLists.txt
konro_loc/common/: CMakeLists.txt
konro_loc/common/src/: config.cpp
konro_loc/konrolib/: CMakeLists.txt
konro_loc/peopledetect/: CMakeLists.txt
konro_loc/rm/: CMakeLists.txt
konro_loc/rm/librmcommon/: CMakeLists.txt  dir.h  namespaces.cpp  numericvalue.h  timer.h
konro_loc/rm/platformcontrol/: CMakeLists.txt
konro_loc/rm/platformcontrol/cgroup/: cgrouputil.cpp
konro_loc/rm/platformcontrol/drom/: dromcontrol.cpp  dromcontrol.h
konro_loc/rm/platformcontrol/drom/controllers/: cpuguard.cpp  cpuguard.h  cpusetcontrol.cpp  cpusetcontrol.h  cputracker.cpp  cputracker.h
konro_loc/rm/platformcontrol/tpc/: tpc.cpp
konro_loc/rm/platformdescription/: CMakeLists.txt  platformdescription.cpp
konro_loc/rm/platformmonitor/: CMakeLists.txt  platformmonitor.cpp
konro_loc/rm/policymanager/: CMakeLists.txt  policymanager.cpp  policymanager.h
konro_loc/rm/policymanager/policies/: dromrandompolicy.cpp  dromrandpolicy.h  mincorespolicy.cpp  nopolicy.h  puprogressivepolicy.cpp  randpolicy.cpp
konro_loc/rm/src/: konrohttp.cpp  main.cpp
konro_loc/rm/workloadmanager/: CMakeLists.txt
konro_loc/testhwloc/: CMakeLists.txt  testhwloc.cpp
konro_loc/testkonrolib/: CMakeLists.txt  testkonrolib.cpp
konro_loc/testnamespaces/: CMakeLists.txt  testnamespaces.cpp
konro_loc/testplatformcontrol/: CMakeLists.txt  test_cpusetcontrol.cpp  test_createcgroup.cpp  test_findcgrouppath.cpp  test_keyvalueparser.cpp  test_split.cpp
konro_loc/testrmcommon/: CMakeLists.txt  testrmcommon.cpp
konro_loc/testsensors/: CMakeLists.txt
konro_loc/testthreadsafequeue/: CMakeLists.txt  test_threadsafequeue.cpp
konro_loc/testtimer/: CMakeLists.txt  testtimer.cpp
slurm-23.11.6/: slurm-smd-build-deps_23.11.6-1_all.deb  slurm-smd-build-deps_23.11.6-1_arm64.buildinfo  slurm-smd-build-deps_23.11.6-1_arm64.changes
slurm-23.11.6/debian/: slurm-smd-dev.install  slurm-smd-sackd.postrm.debhelper  slurm-smd-slurmctld.postrm.debhelper  slurm-smd-slurmd.postrm.debhelper  slurm-smd-slurmdbd.postrm.debhelper  slurm-smd-slurmdbd.slurmdbd.service  slurm-smd-slurmrestd.postrm.debhelper  slurm-smd-slurmrestd.slurmrestd.service  slurm-smd.install
slurm-23.11.6/debian/slurm-smd-libnss-slurm/DEBIAN/: shlibs
slurm-23.11.6/debian/slurm-smd-libpmi0/DEBIAN/: shlibs
slurm-23.11.6/debian/slurm-smd-libpmi2-0/DEBIAN/: shlibs
slurm-23.11.6/debian/slurm-smd/DEBIAN/: shlibs
slurm-23.11.6/doc/man/man1/: sacct.html  sacctmgr.html  salloc.html  sattach.html  sbatch.html  sbcast.html  scancel.html  scontrol.html  scrontab.html  scrun.html  sdiag.html  sh5util.html  sinfo.html  sprio.html  squeue.html  sreport.html  srun.html  sshare.html  sstat.html  strigger.html  sview.html
slurm-23.11.6/doc/man/man5/: acct_gather.conf.html  burst_buffer.conf.html  cgroup.conf.html  ext_sensors.conf.html  gres.conf.html  helpers.conf.html  knl.conf.html  (+6 more)
slurm-23.11.6/etc/: slurmrestd.service
slurm-23.11.6/obj-aarch64-linux-gnu/: config.h  config.status  libtool
slurm-23.11.6/obj-aarch64-linux-gnu/etc/: init.d.slurm  init.d.slurmdbd
slurm-23.11.6/obj-aarch64-linux-gnu/testsuite/: testsuite.conf.sample
slurm-23.11.6/src/sacctmgr/: usage.bino
slurm-23.11.6/src/sackd/: sackd
slurm-23.11.6/src/scontrol/: usage.bino
slurm-23.11.6/src/scrontab/: default_crontab.bino  scrontab
slurm-23.11.6/src/scrun/: scrun  usage.bino
slurm-23.11.6/src/slurmctld/: usage.bino
slurm-23.11.6/src/slurmrestd/: slurmrestd
(+258 files in other folders)
